--- a/index.html
+++ b/index.html
@@ -9,43 +9,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/site.webmanifest">
-    <script>
-        const kmMinutesInput = document.getElementById('kmMinutesInput');
-        const kmSecondsInput = document.getElementById('kmSecondsInput');
-        const mileMinutesInput = document.getElementById('mileMinutesInput');
-        const mileSecondsInput = document.getElementById('mileSecondsInput');
-
-        function convertPace(minutes, seconds) {
-            return minutes + (seconds / 60);
-        }
-
-        function updateMilePace(kmMinutes, kmSeconds) {
-            const kmPace = convertPace(Number(kmMinutes), Number(kmSeconds));
-            const milePace = kmPace * 1.609344;
-            const mileMinutes = Math.floor(milePace);
-            const mileSeconds = Math.round((milePace - mileMinutes) * 60);
-
-            mileMinutesInput.value = mileMinutes;
-            mileSecondsInput.value = mileSeconds;
-        }
-
-        function updateKmPace(mileMinutes, mileSeconds) {
-            const milePace = convertPace(Number(mileMinutes), Number(mileSeconds));
-            const kmPace = milePace / 1.609344;
-            const kmMinutes = Math.floor(kmPace);
-            const kmSeconds = Math.round((kmPace - kmMinutes) * 60);
-
-            kmMinutesInput.value = kmMinutes;
-            kmSecondsInput.value = kmSeconds;
-        }
-
-        kmMinutesInput.addEventListener('input', () => updateMilePace(kmMinutesInput.value, kmSecondsInput.value || 0));
-        kmSecondsInput.addEventListener('input', () => updateMilePace(kmMinutesInput.value || 0, kmSecondsInput.value));
-        
-        mileMinutesInput.addEventListener('input', () => updateKmPace(mileMinutesInput.value, mileSecondsInput.value || 0));
-        mileSecondsInput.addEventListener('input', () => updateKmPace(mileMinutesInput.value || 0, mileSecondsInput.value));
-    </script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="card w-[500px] bg-base-100 shadow-xl p-6 relative">
@@ -103,5 +68,41 @@
             <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
         </svg>
     </a>
+    <script>
+        const kmMinutesInput = document.getElementById('kmMinutesInput');
+        const kmSecondsInput = document.getElementById('kmSecondsInput');
+        const mileMinutesInput = document.getElementById('mileMinutesInput');
+        const mileSecondsInput = document.getElementById('mileSecondsInput');
+
+        function convertPace(minutes, seconds) {
+            return minutes + (seconds / 60);
+        }
+
+        function updateMilePace(kmMinutes, kmSeconds) {
+            const kmPace = convertPace(Number(kmMinutes), Number(kmSeconds));
+            const milePace = kmPace * 1.609344;
+            const mileMinutes = Math.floor(milePace);
+            const mileSeconds = Math.round((milePace - mileMinutes) * 60);
+
+            mileMinutesInput.value = mileMinutes;
+            mileSecondsInput.value = mileSeconds;
+        }
+
+        function updateKmPace(mileMinutes, mileSeconds) {
+            const milePace = convertPace(Number(mileMinutes), Number(mileSeconds));
+            const kmPace = milePace / 1.609344;
+            const kmMinutes = Math.floor(kmPace);
+            const kmSeconds = Math.round((kmPace - kmMinutes) * 60);
+
+            kmMinutesInput.value = kmMinutes;
+            kmSecondsInput.value = kmSeconds;
+        }
+
+        kmMinutesInput.addEventListener('input', () => updateMilePace(kmMinutesInput.value, kmSecondsInput.value || 0));
+        kmSecondsInput.addEventListener('input', () => updateMilePace(kmMinutesInput.value || 0, kmSecondsInput.value));
+        
+        mileMinutesInput.addEventListener('input', () => updateKmPace(mileMinutesInput.value, mileSecondsInput.value || 0));
+        mileSecondsInput.addEventListener('input', () => updateKmPace(mileMinutesInput.value || 0, mileSecondsInput.value));
+    </script>
 </body>
 </html>
