--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="/site.webmanifest">
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="card w-[500px] bg-base-100 shadow-xl p-6 relative">
+    <div class="w-[500px] bg-base-100 shadow-xl p-6 relative">
         <h2 class="text-2xl font-bold mb-4 text-center">Running pace converter</h2>
         
         <div class="flex items-center gap-4 mb-4">
