--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/site.webmanifest">
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="w-[500px] bg-base-100 shadow-xl p-6 relative">
+<body class="flex items-center justify-center min-h-screen">
+    <div class="w-[500px] p-6 relative">
         <h2 class="text-2xl font-bold mb-4 text-center">Running pace converter</h2>
         
         <div class="flex items-center gap-4 mb-4">
