--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Running pace converter</title>
     <meta name="description" content="Simple and fast conversion between minutes/kilometer and minutes/mile. That's it.">
     <link rel="canonical" href="https://www.runningconverter.com">
-    <link href="/tailwind.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.24/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link href="/styles.css" rel="stylesheet" type="text/css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
