Add image to page

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 </head>
 <body class="flex items-center justify-center min-h-screen">
     <div class="w-[500px] p-6 relative">
+        <div class="flex justify-center items-center mb-4">
+            <img src="/android-chrome-192x192.png" alt="alternate text">
+        </div>
         <h2 class="text-2xl font-bold mb-4 text-center">Running pace converter</h2>
-        
         <div class="flex items-center gap-4 mb-4">
             <div class="text-lg font-semibold w-20">min/km</div>
             <div class="flex items-center gap-2 flex-grow">
