Update meta and titles and stuff

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Running pace converter</title>
-    <meta name="description" content="Simple and fast conversion between minutes/kilometer and minutes/mile. That's it.">
+    <title>mi/km pace converter</title>
+    <meta name="description" content="Convert running pace between minutes/kilometer and minutes/mile.">
     <link rel="canonical" href="https://www.runningconverter.com">
     <link href="/styles.css" rel="stylesheet" type="text/css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -18,7 +18,7 @@
         <div class="flex justify-center items-center mb-4">
             <img src="/android-chrome-192x192.png" alt="alternate text">
         </div>
-        <h2 class="text-2xl font-bold mb-4 text-center">Running pace converter</h2>
+        <h2 class="text-2xl font-bold mb-4 text-center">mi/km pace converter</h2>
         <div class="flex items-center gap-4 mb-4">
             <div class="text-lg font-semibold w-20">min/km</div>
             <div class="flex items-center gap-2 flex-grow">
