--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="flex justify-center items-center mb-4">
             <img src="/android-chrome-192x192.png" alt="alternate text">
         </div>
-        <h2 class="text-2xl font-bold mb-4 text-center">miles/kilometer pace converter</h2>
+        <h2 class="text-2xl font-bold mb-4 text-center">Running pace converter</h2>
         <div class="flex items-center gap-4 mb-4">
             <div class="text-lg font-semibold w-20">min/km</div>
             <div class="flex items-center gap-2 flex-grow">
