Change meta description and title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>miles/kilometer pace converter</title>
-    <meta name="description" content="Convert running pace between minutes/kilometer and minutes/mile.">
+    <title>Running pace converter</title>
+    <meta name="description" content="Easily convert between running paces (minutes/kilometer <-> minutes/mile) and popular race lengths.">
     <link rel="canonical" href="https://www.runningconverter.com">
     <link href="/styles.css" rel="stylesheet" type="text/css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
