Make columns tighter

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <body class="flex items-center justify-center min-h-screen">
     <div class="w-[500px] p-6 relative">
-        <div class="flex justify-center items-center mb-4">
+        <div class="flex justify-center items-center">
             <img src="/android-chrome-192x192.png" alt="alternate text">
         </div>
         <h2 class="text-2xl font-bold mb-4 text-center">Running pace converter</h2>
         <div class="flex items-center gap-4 mb-4">
-            <div class="text-lg font-semibold w-20">min/km</div>
+            <div class="text-lg font-semibold w-14">min/km</div>
             <div class="flex items-center gap-2 flex-grow">
                 <input 
                     type="number" 
@@ -43,7 +43,7 @@
         </div>
 
         <div class="flex items-center gap-4 mb-4">
-            <div class="text-lg font-semibold w-20">min/mi</div>
+            <div class="text-lg font-semibold w-14">min/mi</div>
             <div class="flex items-center gap-2 flex-grow">
                 <input 
                     type="number" 
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="flex items-center gap-4 mb-4">
-            <div class="text-lg font-semibold w-20">5K</div>
+            <div class="text-lg font-semibold w-14">5K</div>
             <div class="flex items-center gap-2 flex-grow">
                 <input 
                     type="number" 
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="flex items-center gap-4 mb-4">
-            <div class="text-lg font-semibold w-20">10K</div>
+            <div class="text-lg font-semibold w-14">10K</div>
             <div class="flex items-center gap-2 flex-grow">
                 <input 
                     type="number" 
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="flex items-center gap-4 mb-4">
-            <div class="text-lg font-semibold w-20">HM</div>
+            <div class="text-lg font-semibold w-14">HM</div>
             <div class="flex items-center gap-2 flex-grow">
                 <input 
                     type="number" 
@@ -140,7 +140,7 @@
             </div>
         </div>
         <div class="flex items-center gap-4 mb-4">
-            <div class="text-lg font-semibold w-20">Marathon</div>
+            <div class="text-lg font-semibold w-14">Mara.</div>
             <div class="flex items-center gap-2 flex-grow">
                 <input 
                     type="number" 
