--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/site.webmanifest">
 </head>
-<body class="flex items-center justify-center min-h-screen">
-    <div class="w-[500px] p-6 relative">
+<body class="flex items-center justify-center flex-col min-h-screen">
+    <div class="flex-1 p-6 relative w-[400px]">
         <div class="flex justify-center items-center">
             <img src="/android-chrome-192x192.png" alt="alternate text">
         </div>
@@ -22,161 +22,65 @@
         <div class="flex items-center gap-4 mb-4">
             <div class="text-lg font-semibold w-14">min/km</div>
             <div class="flex items-center gap-2 flex-grow">
-                <input 
-                    type="number" 
-                    id="kmMinutesInput"
-                    placeholder="min" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="kmMinutesInput" placeholder="min" class="input input-bordered flex-grow" min="0" max="59">
                 <span>:</span>
-                <input 
-                    type="number" 
-                    id="kmSecondsInput"
-                    placeholder="sec" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="kmSecondsInput" placeholder="sec" class="input input-bordered flex-grow" min="0" max="59">
             </div>
         </div>
 
         <div class="flex items-center gap-4 mb-4">
             <div class="text-lg font-semibold w-14">min/mi</div>
             <div class="flex items-center gap-2 flex-grow">
-                <input 
-                    type="number" 
-                    id="mileMinutesInput"
-                    placeholder="min" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="mileMinutesInput" placeholder="min" class="input input-bordered flex-grow" min="0" max="59">
                 <span>:</span>
-                <input 
-                    type="number" 
-                    id="mileSecondsInput"
-                    placeholder="sec" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="mileSecondsInput" placeholder="sec" class="input input-bordered flex-grow" min="0" max="59">
             </div>
         </div>
         <div class="flex items-center gap-4 mb-4">
             <div class="text-lg font-semibold w-14">5K</div>
             <div class="flex items-center gap-2 flex-grow">
-                <input 
-                    type="number" 
-                    id="fiveKmMinutesInput"
-                    placeholder="min" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="fiveKmMinutesInput" placeholder="min" class="input input-bordered flex-grow" min="0" max="59">
                 <span>:</span>
-                <input 
-                    type="number" 
-                    id="fiveKmSecondsInput"
-                    placeholder="sec" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="fiveKmSecondsInput" placeholder="sec" class="input input-bordered flex-grow" min="0" max="59">
             </div>
         </div>
         <div class="flex items-center gap-4 mb-4">
             <div class="text-lg font-semibold w-14">10K</div>
             <div class="flex items-center gap-2 flex-grow">
-                <input 
-                    type="number" 
-                    id="tenKmMinutesInput"
-                    placeholder="min" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="tenKmMinutesInput" placeholder="min" class="input input-bordered flex-grow" min="0" max="59">
                 <span>:</span>
-                <input 
-                    type="number" 
-                    id="tenKmSecondsInput"
-                    placeholder="sec" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="tenKmSecondsInput" placeholder="sec" class="input input-bordered flex-grow" min="0" max="59">
             </div>
         </div>
         <div class="flex items-center gap-4 mb-4">
             <div class="text-lg font-semibold w-14">HM</div>
             <div class="flex items-center gap-2 flex-grow">
-                <input 
-                    type="number" 
-                    id="halfMarathonHoursInput"
-                    placeholder="hour" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="halfMarathonHoursInput" placeholder="hour" class="input input-bordered flex-grow" min="0" max="59">
                 <span>:</span>
-                <input 
-                    type="number" 
-                    id="halfMarathonMinutesInput"
-                    placeholder="min" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="halfMarathonMinutesInput" placeholder="min" class="input input-bordered flex-grow" min="0" max="59">
                 <span>:</span>
-                <input 
-                    type="number" 
-                    id="halfMarathonSecondsInput"
-                    placeholder="sec" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="halfMarathonSecondsInput" placeholder="sec" class="input input-bordered flex-grow" min="0" max="59">
             </div>
         </div>
         <div class="flex items-center gap-4 mb-4">
             <div class="text-lg font-semibold w-14">Mara.</div>
             <div class="flex items-center gap-2 flex-grow">
-                <input 
-                    type="number" 
-                    id="marathonHoursInput"
-                    placeholder="hour" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="marathonHoursInput" placeholder="hour" class="input input-bordered flex-grow" min="0" max="59">
                 <span>:</span>
-                <input 
-                    type="number" 
-                    id="marathonMinutesInput"
-                    placeholder="min" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="marathonMinutesInput" placeholder="min" class="input input-bordered flex-grow" min="0" max="59">
                 <span>:</span>
-                <input 
-                    type="number" 
-                    id="marathonSecondsInput"
-                    placeholder="sec" 
-                    class="input input-bordered flex-grow"
-                    min="0"
-                    max="59"
-                />
+                <input type="number" id="marathonSecondsInput" placeholder="sec" class="input input-bordered flex-grow" min="0" max="59">
             </div>
         </div>
     </div>
-    <p class="absolute bottom-4 left-4 text-gray-500 hover:text-gray-700">Built with love and AI in Brooklyn, NYC.</p>
-    <a href="https://github.com/felixbouleau/runningconverter-com" target="_blank" class="absolute bottom-4 right-4 text-gray-500 hover:text-gray-700">
+    <div class="flex">
+      <p class="bottom-4 left-4 text-gray-500 flex-1">Built with love, friends and AI</p>
+      <a href="https://github.com/felixbouleau/runningconverter-com" target="_blank" class="asolute bottom-4 right-4 text-gray-500 hover:text-gray-700">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="gray">
-            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"></path>
         </svg>
-    </a>
+      </a>
+    </div>
     <script>
         function convertPace(hours, minutes, seconds) {
             return (hours * 60) + minutes + (seconds / 60);
@@ -281,4 +185,3 @@
         marathonSecondsInput.addEventListener('input', () => handleMarathonPace(marathonMinutesInput.value || 0, marathonSecondsInput.value));
     </script>
 </body>
-</html>
